# daisyft

./: .gitignore  DEV_NOTES.md  LICENSE  README.md  TEST_NOTES.md  pyproject.toml
src/daisyft/: __init__.py
src/daisyft/cli/: add.py  build.py  config.py  dev.py  init.py  main.py  run.py  sync.py
src/daisyft/cli/registry/: commands.py
src/daisyft/components/: button.py
src/daisyft/registry/: base.py  decorators.py
src/daisyft/registry/components/: __init__.py  button.py
src/daisyft/templates/: component.py.jinja2  daisyft.conf.py.jinja2  daisyft.toml.jinja2  input.css.jinja2  main.py.jinja2
src/daisyft/templates/components/: button.css.jinja2  button.py.jinja2
src/daisyft/utils/: command_utils.py  config.py  console.py  downloader.py  install.py  package.py  paths.py  process.py  template.py  template_generator.py  templates.py  toml_config.py  variants.py
tests/: test_cli.py  test_init.py
